--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,107 +1,432 @@
-:root {
-  --max-width: 1100px;
-  --border-radius: 12px;
-  --font-mono: ui-monospace, Menlo, Monaco, 'Cascadia Mono', 'Segoe UI Mono',
-    'Roboto Mono', 'Oxygen Mono', 'Ubuntu Monospace', 'Source Code Pro',
-    'Fira Mono', 'Droid Sans Mono', 'Courier New', monospace;
-
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
-
-  --primary-glow: conic-gradient(
-    from 180deg at 50% 50%,
-    #16abff33 0deg,
-    #0885ff33 55deg,
-    #54d6ff33 120deg,
-    #0071ff33 160deg,
-    transparent 360deg
-  );
-  --secondary-glow: radial-gradient(
-    rgba(255, 255, 255, 1),
-    rgba(255, 255, 255, 0)
-  );
-
-  --tile-start-rgb: 239, 245, 249;
-  --tile-end-rgb: 228, 232, 233;
-  --tile-border: conic-gradient(
-    #00000080,
-    #00000040,
-    #00000030,
-    #00000020,
-    #00000010,
-    #00000010,
-    #00000080
-  );
-
-  --callout-rgb: 238, 240, 241;
-  --callout-border-rgb: 172, 175, 176;
-  --card-rgb: 180, 185, 188;
-  --card-border-rgb: 131, 134, 135;
+/* ABC Ginto Nord Fonts */
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-UltraItalic-Trial.woff2") format("woff2");
+  font-weight: 900;
+  font-style: italic;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Ultra-Trial.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+}
 
-    --primary-glow: radial-gradient(rgba(1, 65, 255, 0.4), rgba(1, 65, 255, 0));
-    --secondary-glow: linear-gradient(
-      to bottom right,
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0),
-      rgba(1, 65, 255, 0.3)
-    );
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Thin-Trial.woff2") format("woff2");
+  font-weight: 100;
+  font-style: normal;
+}
 
-    --tile-start-rgb: 2, 13, 46;
-    --tile-end-rgb: 2, 5, 19;
-    --tile-border: conic-gradient(
-      #ffffff80,
-      #ffffff40,
-      #ffffff30,
-      #ffffff20,
-      #ffffff10,
-      #ffffff10,
-      #ffffff80
-    );
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-ThinItalic-Trial.woff2") format("woff2");
+  font-weight: 100;
+  font-style: italic;
+}
 
-    --callout-rgb: 20, 20, 20;
-    --callout-border-rgb: 108, 108, 108;
-    --card-rgb: 100, 100, 100;
-    --card-border-rgb: 200, 200, 200;
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Regular-Trial.woff2") format("woff2");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-RegularItalic-Trial.woff2") format("woff2");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Medium-Trial.woff2") format("woff2");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-MediumItalic-Trial.woff2") format("woff2");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Light-Trial.woff2") format("woff2");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-LightItalic-Trial.woff2") format("woff2");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Hairline-Trial.woff2") format("woff2");
+  font-weight: 100;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-HairlineItalic-Trial.woff2") format("woff2");
+  font-weight: 100;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Bold-Trial.woff2") format("woff2");
+  font-weight: 700;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-BoldItalic-Trial.woff2") format("woff2");
+  font-weight: 700;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-Black-Trial.woff2") format("woff2");
+  font-weight: 900;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "ABC Ginto Nord";
+  src: url("../../public/fonts/ABC Ginto Nord/ABCGintoNord-BlackItalic-Trial.woff2") format("woff2");
+  font-weight: 900;
+  font-style: italic;
+}
+
+/* Whitney Fonts */
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneymedium.otf") format("opentype");
+  font-weight: 500;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneymediumitalic.otf") format("opentype");
+  font-weight: 500;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneylight.otf") format("opentype");
+  font-weight: 300;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneylightitalic.otf") format("opentype");
+  font-weight: 300;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneybook.otf") format("opentype");
+  font-weight: 400;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneybookitalic.otf") format("opentype");
+  font-weight: 400;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneysemibold.otf") format("opentype");
+  font-weight: 600;
+  font-style: normal;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/WhitneySemiboldItalic.otf") format("opentype");
+  font-weight: 600;
+  font-style: italic;
+}
+
+@font-face {
+  font-family: "Whitney";
+  src: url("../../public/fonts/Whitney/whitneybold.otf") format("opentype");
+  font-weight: 700;
+  font-style: normal;
+}
+
+:root {
+  --zinc-950: #09090b;
+  --zinc-900: #18181b;
+  --zinc-800: #27272a;
+  --zinc-700: #3f3f46;
+  --zinc-600: #52525b;
+  --zinc-500: #71717a;
+  --zinc-400: #a1a1aa;
+  --zinc-300: #d4d4d8;
+  --zinc-200: #e4e4e7;
+  --zinc-100: #f4f4f5;
+  --zinc-50: #fafafa;
+}
+
+
+*::before, *::after, * {
+  box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+}
+
+html, body {
+  font-family: "Whitney";
+  -webkit-font-smoothing: antialiased;
+  text-rendering: optimizeLegibility;
+
+  overflow: hidden;
+
+  background-color: var(--zinc-900);
+  color: var(--zinc-100);
+}
+
+h1, h2, h3, h4 {
+  font-family: "ABC Ginto Nord";
+}
+
+img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  border-radius: inherit;
+}
+
+.page-wrapper {
+  margin: 0 auto;
+
+  height: 100vh;
+  height: 100svh;
+  max-height: 100vh;
+
+  width: 100vw;
+  max-width: 100vw;
+
+  overflow: auto;
+
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  grid-template-rows: repeat(4, 1fr);
+
+  gap: 1rem;
+  padding: 1rem;
+}
+
+.create-post-wrapper {
+  position: absolute;
+  top: 1rem;
+  left: 50%;
+  transform: translate(-50%, 0);
+
+  background-color: var(--zinc-800);
+
+  z-index: 10;
+}
+
+.create-post-container {
+  display: none;
+  flex-direction: column;
+  gap: 0.5rem;
+  padding: 1rem;
+}
+
+.create-post-wrapper:hover .create-post-container {
+  display: flex;
+}
+
+.create-post-wrapper:hover .create-post-btn-wrapper {
+  display: flex;
+}
+
+.create-post-wrapper:hover .create-post-toggle {
+  display: none;
+}
+
+.create-post-toggle {
+  font-size: 16px;
+  font-weight: 600;
+  text-transform: uppercase;
+  user-select: none;
+  padding: 1rem;
+}
+
+.create-post-header {
+  text-transform: uppercase;
+  user-select: none;
+  font-size: 24px;
+}
+
+.create-post-input {
+  border: 0px solid transparent;
+  background-color: transparent;
+  color: var(--zinc-300);
+  outline: none;
+  width: 100%;
+}
+
+.create-post-divider {
+  display: flex;
+  flex-direction: column;
+  gap: 0.5rem;
+}
+
+.create-post-input-container {
+  padding: 11px;
+  background-color: var(--zinc-700);
+  border-radius: 4px;
+}
+
+.create-post-image-container {
+  height: 300px;
+  width: 300px;
+  background-color: var(--zinc-700);
+  display: grid;
+  place-items: center;
+  cursor: pointer;
+  overflow: hidden;
+}
+
+.create-post-btn-wrapper {
+  display: none;
+  border-top: thin solid var(--zinc-700);
+  padding: 1rem 0.5rem;
+}
+
+.create-post-btn {
+  background-color: #60a5fa;
+  padding: 8px 16px;
+  font-size: 16px;
+  color: #eff6ff;
+  border-radius: 4px;
+  border: 0px solid transparent;
+  cursor: pointer;
+  width: 100%;
+  font-weight: 600;
+  text-transform: uppercase;
+}
+
+.item {
+  display: flex;
+  flex-direction: column;
+  background-color: var(--zinc-950);
+
+  padding: 1rem;
+  gap: 0.5rem;
+}
+
+.item-image {
+  height: 200px;
+  width: 100%;
+
+  overflow: hidden;
+  border-radius: 4px;
+}
+
+.item-caption {
+  font-size: 18px;
+  font-weight: 600;
+}
+
+.item-info-wrapper {
+  display: flex;
+  justify-content: space-between;
+}
+
+.item-info-text {
+  color: var(--zinc-400);
+}
+
+.item-del-btn {
+  border: 0px solid transparent;
+  padding: 8px 12px;
+  background-color: #dc2626;
+  color: #fef2f2;
+  font-size: 14px;
+  cursor: pointer;
+}
+
+@keyframes fadeInOut {
+  0% {
+    opacity: 1;
+  }
+
+  50% {
+    opacity: 0.5;
+  }
+
+  100% {
+    opacity: 1;
   }
 }
 
-* {
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
+.skeleton-item {
+  background-color: var(--zinc-950);
+
+  display: flex;
+  flex-direction: column;
+
+  padding: 1rem;
+  gap: 0.5rem;
 }
 
-html,
-body {
-  max-width: 100vw;
-  overflow-x: hidden;
+.skeleton-item-image {
+  height: 200px;
+  width: 100%;
+
+  background-color: var(--zinc-800);
+
+  animation: fadeInOut 1s infinite linear;
+
+  overflow: hidden;
+  border-radius: 4px;
 }
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
+.skeleton-item-caption {
+  background-color: var(--zinc-800);
+  color: transparent;
+  border-radius: 8px;
+  height: 12px;
+  width: fit-content;
+
+  animation: fadeInOut 1s infinite linear;
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
+@media only screen and (max-width: 1280px) {
+  .page-wrapper {
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr);
+  }
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
+@media only screen and (max-width: 620px) {
+  .page-wrapper {
+    grid-template-columns: repeat(1, 1fr);
+    grid-template-rows: repeat(1, 1fr);
   }
 }
