post btn color changes

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -319,7 +319,7 @@ img {
 }
 
 .create-post-btn {
-  background-color: #60a5fa;
+  background-color: #2563eb;
   padding: 8px 16px;
   font-size: 16px;
   color: #eff6ff;
